--- a/Crypto_Challenge.ipynb
+++ b/Crypto_Challenge.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = \"C://Users/shawn/GitLabClone/02-Homework/20-Unsupervised-Learning/Instructions/crypto_data.csv\""
+    "file = \"Resources/crypto_data.csv\""
    ]
   },
   {
